--- a/client/views/student/login.html
+++ b/client/views/student/login.html
@@ -15,7 +15,7 @@
   />
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-  <link href="../css/login.css" rel="stylesheet" type="text/css">
+  <link href="views/student/css/login.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -45,8 +45,8 @@
                 <input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" />
                 <label for="loginkeeping">Keep me logged in</label>
               </p> -->
-              <p ng-show="errLogin" class="p_errorLogin" text> {{textLogin}} </p>              
-              
+              <p ng-show="errLogin" class="p_errorLogin" text> {{textLogin}} </p>
+
               <p class="login button">
                 <input type="submit" value="Signin" />
               </p>
@@ -58,7 +58,7 @@
           </div>
 
 
-          
+
           <div id="register" class="animate form" ng-if="!login">
             <form ng-submit="register()" autocomplete="on">
 
@@ -83,9 +83,9 @@
                 <input id="passwordsignup_confirm" name="passwordsignup_confirm" ng-model="student.repass" required="required" type="password"
                   placeholder="eg. X8df!90EO" />
               </p>
-              <p ng-show="usernameIsExisting" class="p_errorLogin"> * Tài khoản đã tồn tại, vui lòng thử lại với email mới </p>                            
+              <p ng-show="usernameIsExisting" class="p_errorLogin"> * Tài khoản đã tồn tại, vui lòng thử lại với email mới </p>
               <p class="signin button">
-                <input  type="submit" value="Sign up" />
+                <input type="submit" value="Sign up" />
               </p>
               <p class="change_link">
                 Already a member ?
