--- a/client/views/student/login.html
+++ b/client/views/student/login.html
@@ -1,11 +1,14 @@
 <head>
   <meta charset="UTF-8" />
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   />
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
   <link href="views/student/css/login.css" rel="stylesheet" type="text/css">
+  <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <div class="container">
