--- a/client/views/company/login.html
+++ b/client/views/company/login.html
@@ -9,9 +9,9 @@
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //Meta-Tags -->
 
-<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+<link href="views/company/css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
 
-<!-- Style --> <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+<!-- Style --> <link rel="stylesheet" href="views/company/css/style.css" type="text/css" media="all">
 
 <!-- Fonts -->
 <link href="//fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -24,9 +24,9 @@
 
 	<div class="w3layoutscontaineragileits">
 	<h2>Login here</h2>
-		<form action="#" method="post">
-			<input type="Email" Name="Email" placeholder="EMAIL" required="">
-			<input type="password" Name="Password" placeholder="PASSWORD" required="">
+		<form ng-submit = "loginCompany()">
+			<input type="Email" Name="Email" placeholder="EMAIL" required="" ng-model="company.email">
+			<input type="password" Name="Password" placeholder="PASSWORD" required="" ng-model="company.password">
 			<ul class="agileinfotickwthree">
 				<li>
 					<input type="checkbox" id="brand1" value="">
@@ -85,10 +85,10 @@
 	</div>
 	<!-- //for register popup -->
 	
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="views/company/js/jquery-2.1.4.min.js"></script>
 
 	<!-- pop-up-box-js-file -->  
-		<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+		<script src="views/company/js/jquery.magnific-popup.js" type="text/javascript"></script>
 	<!--//pop-up-box-js-file -->
 	<script>
 		$(document).ready(function() {
