--- a/client/views/admin/home.html
+++ b/client/views/admin/home.html
@@ -1,6 +1,5 @@
-
 <head>
-   <!-- Bootstrap 3.3.7 -->
+  <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="../../vendor/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../../vendor/font-awesome/css/font-awesome.min.css">
@@ -37,9 +36,12 @@
     <!-- Logo -->
     <a href="index.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>BKC</b></span>
+      <span class="logo-mini">
+        <b>BKC</b>
+      </span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>BKC</b>onnect</span>
+      <span class="logo-lg">
+        <b>BKC</b>onnect</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -61,14 +63,16 @@
               <li>
                 <!-- inner menu: contains the actual data -->
                 <ul class="menu">
-                  <li><!-- start message -->
+                  <li>
+                    <!-- start message -->
                     <a href="#">
                       <div class="pull-left">
                         <img src="views/admin/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Support Team
-                        <small><i class="fa fa-clock-o"></i> 5 mins</small>
+                        <small>
+                          <i class="fa fa-clock-o"></i> 5 mins</small>
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
@@ -81,7 +85,8 @@
                       </div>
                       <h4>
                         AdminLTE Design Team
-                        <small><i class="fa fa-clock-o"></i> 2 hours</small>
+                        <small>
+                          <i class="fa fa-clock-o"></i> 2 hours</small>
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
@@ -93,7 +98,8 @@
                       </div>
                       <h4>
                         Developers
-                        <small><i class="fa fa-clock-o"></i> Today</small>
+                        <small>
+                          <i class="fa fa-clock-o"></i> Today</small>
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
@@ -105,7 +111,8 @@
                       </div>
                       <h4>
                         Sales Department
-                        <small><i class="fa fa-clock-o"></i> Yesterday</small>
+                        <small>
+                          <i class="fa fa-clock-o"></i> Yesterday</small>
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
@@ -117,14 +124,17 @@
                       </div>
                       <h4>
                         Reviewers
-                        <small><i class="fa fa-clock-o"></i> 2 days</small>
+                        <small>
+                          <i class="fa fa-clock-o"></i> 2 days</small>
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
                   </li>
                 </ul>
               </li>
-              <li class="footer"><a href="#">See All Messages</a></li>
+              <li class="footer">
+                <a href="#">See All Messages</a>
+              </li>
             </ul>
           </li>
           <!-- Notifications: style can be found in dropdown.less -->
@@ -145,8 +155,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
-                      page and may cause design problems
+                      <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the page and may cause design problems
                     </a>
                   </li>
                   <li>
@@ -166,10 +175,12 @@
                   </li>
                 </ul>
               </li>
-              <li class="footer"><a href="#">View all</a></li>
+              <li class="footer">
+                <a href="#">View all</a>
+              </li>
             </ul>
           </li>
-          
+
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -183,7 +194,7 @@
                 <p>
                   HuyLV - Web Developer
                 </p>
-              </li>            
+              </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
@@ -197,7 +208,9 @@
           </li>
           <!-- Control Sidebar Toggle Button -->
           <li>
-            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+            <a href="#" data-toggle="control-sidebar">
+              <i class="fa fa-gears"></i>
+            </a>
           </li>
         </ul>
       </div>
@@ -214,57 +227,91 @@
         </div>
         <div class="pull-left info">
           <p>HuyLV</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <a href="#">
+            <i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
-    
+
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Tác Vụ</li>
         <li class="active treeview">
           <a href="#">
-            <i class="fa  fa-user-secret"></i> <span>Quản lý Công Ty</span>
+            <i class="fa  fa-user-secret"></i>
+            <span>Quản lý Công Ty</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="index.html"><i class="fa fa-circle-o text-red"></i> Đăng Ký Mới</a></li>
-            <li><a href="index2.html"><i class="fa fa-circle-o text-aqua"></i> Quản lý tài khoản Công Ty</a></li>
+            <li class="active">
+              <a href="index.html">
+                <i class="fa fa-circle-o text-red"></i> Đăng Ký Mới</a>
+            </li>
+            <li>
+              <a href="index2.html">
+                <i class="fa fa-circle-o text-aqua"></i> Quản lý tài khoản Công Ty</a>
+            </li>
           </ul>
         </li>
-       
+
         <li class="treeview">
-            <a href="#">
-              <i class="fa fa-files-o"></i>
-              <span>Quản lý Sinh Viên</span>
-              <span class="pull-right-container">
-                <span class="label label-primary pull-right">4</span>
-              </span>
-            </a>
-            <ul class="treeview-menu">
-              <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Danh sách sinh viên</a></li>
-              </ul>
+          <a href="#">
+            <i class="fa fa-files-o"></i>
+            <span>Quản lý Sinh Viên</span>
+            <span class="pull-right-container">
+              <span class="label label-primary pull-right">4</span>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li>
+              <a href="pages/layout/top-nav.html">
+                <i class="fa fa-circle-o"></i> Danh sách sinh viên</a>
+            </li>
+          </ul>
         </li>
 
         <li class="treeview">
-            <a href="#">
-              <i class="fa fa-files-o"></i>
-              <span>Quản lý Bài đăng</span>
-              <span class="pull-right-container">
-                <span class="label label-primary pull-right">4</span>
-              </span>
-            </a>
-            <ul class="treeview-menu">
-              <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Danh sách sinh viên</a></li>
-              </ul>
+          <a href="#">
+            <i class="fa fa-files-o"></i>
+            <span>Quản lý Bài đăng</span>
+            <span class="pull-right-container">
+              <span class="label label-primary pull-right">4</span>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li>
+              <a href="pages/layout/top-nav.html">
+                <i class="fa fa-circle-o"></i> Danh sách sinh viên</a>
+            </li>
+          </ul>
         </li>
 
-        <li><a href="https://adminlte.io/docs"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+        <li>
+          <a href="https://adminlte.io/docs">
+            <i class="fa fa-book"></i>
+            <span>Documentation</span>
+          </a>
+        </li>
         <li class="header">LABELS</li>
-        <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+        <li>
+          <a href="#">
+            <i class="fa fa-circle-o text-red"></i>
+            <span>Important</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-circle-o text-yellow"></i>
+            <span>Warning</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-circle-o text-aqua"></i>
+            <span>Information</span>
+          </a>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -273,7 +320,77 @@
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
-   
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <h1>
+        Yêu cầu tạo tài khoản
+      </h1>
+      <ol class="breadcrumb">
+        <li>
+          <a href="#">
+            <i class="fa fa-dashboard"></i> Home</a>
+        </li>
+        <li>
+          <a href="#">Công ty</a>
+        </li>
+        <li class="active">Yêu cầu</li>
+      </ol>
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">Yêu cầu tạo tài khoản</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <table id="example2" class="table table-bordered table-hover">
+                <thead>
+                  <tr>
+                    <th>Tên công ty</th>
+                    <th>Email</th>
+                    <th>Mật khẩu</th>
+                    <th>Lời giới thiệu</th>
+                    <th>Ngày đăng ký</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr class="gradeA">
+                    <td>QuangDoan</td>
+                    <td>quangdoan@gmail.com</td>
+                    <td>quangdoan</td>
+                    <td>Không có</td>
+                    <td>12/10/2017</td>
+                    <td class="actions">
+                      <a href="#" class=" btn btn-danger btn-sm">
+                        <b>Activate</b> </a>
+                    </td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <th>Tên công ty</th>
+                    <th>Email</th>
+                    <th>Mật khẩu</th>
+                    <th>Lời giới thiệu</th>
+                    <th>Ngày đăng ký</th>
+                    <th>Actions</th>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+            <!-- /.box-body -->
+          </div>
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
+    </section>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
@@ -281,8 +398,8 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 1.1.0
     </div>
-    <strong>Copyright &copy; 2017 <a href="https://bkconnect.herokuapp.com/">BKConnect</a>.</strong> All rights
-    reserved.
+    <strong>Copyright &copy; 2017
+      <a href="https://bkconnect.herokuapp.com/">BKConnect</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Add the sidebar's background. This div must be placed
