--- a/client/views/admin/home.html
+++ b/client/views/admin/home.html
@@ -31,7 +31,7 @@
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<div class="wrapper hold-transition skin-blue sidebar-mini">
+<div class="hold-transition skin-blue sidebar-mini">
   <header class="main-header">
     <!-- Logo -->
     <a href="index.html" class="logo">
@@ -245,11 +245,11 @@
           </a>
           <ul class="treeview-menu">
             <li class="active">
-              <a href="index.html">
+              <a href="/admin/home">
                 <i class="fa fa-circle-o text-red"></i> Đăng Ký Mới</a>
             </li>
             <li>
-              <a href="index2.html">
+              <a href="/admin/company">
                 <i class="fa fa-circle-o text-aqua"></i> Quản lý tài khoản Công Ty</a>
             </li>
           </ul>
@@ -320,7 +320,6 @@
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
-    <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
         Yêu cầu tạo tài khoản
@@ -347,12 +346,13 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <table id="example2" class="table table-bordered table-hover">
+              <table id="example1" class="table table-bordered table-hover">
                 <thead>
                   <tr>
+                    <th>#</th>
                     <th>Tên công ty</th>
                     <th>Email</th>
-                    <th>Mật khẩu</th>
+                    <th>Địa chỉ</th>
                     <th>Lời giới thiệu</th>
                     <th>Ngày đăng ký</th>
                     <th>Actions</th>
@@ -360,23 +360,27 @@
                 </thead>
 
                 <tbody>
-                  <tr class="gradeA">
-                    <td>QuangDoan</td>
-                    <td>quangdoan@gmail.com</td>
-                    <td>quangdoan</td>
-                    <td>Không có</td>
-                    <td>12/10/2017</td>
+                  <tr ng-repeat="n in listCompany">
+                    <td>{{$index+1}}</td>
+                    <td>{{n.name}}</td>
+                    <td>{{n.email}}</td>
+                    <td>{{n.address}}</td>
+                    <td>{{n.about}}</td>
+                    <td>{{n.created_at }}</td>
                     <td class="actions">
-                      <a href="#" class=" btn btn-danger btn-sm">
-                        <b>Activate</b> </a>
+                      <a href="#" class=" btn btn-danger btn-sm" ng-disabled="n.activated" ng-click="confirmbyadmin(n)">
+                        <b>Activate</b>
+                      </a>
                     </td>
                   </tr>
                 </tbody>
+
                 <tfoot>
                   <tr>
+                    <th>#</th>
                     <th>Tên công ty</th>
                     <th>Email</th>
-                    <th>Mật khẩu</th>
+                    <th>Địa chỉ</th>
                     <th>Lời giới thiệu</th>
                     <th>Ngày đăng ký</th>
                     <th>Actions</th>
@@ -417,6 +421,11 @@
 </script>
 <!-- Bootstrap 3.3.7 -->
 <script src="../../vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<!-- DataTables -->
+<script src="../../vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="../../vendor/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+
 <!-- Morris.js charts -->
 <script src="../../vendor/raphael/raphael.min.js"></script>
 <script src="../../vendor/morris.js/morris.min.js"></script>
