--- a/client/views/student/login.html
+++ b/client/views/student/login.html
@@ -1,8 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
   <link href="views/student/css/login.css" rel="stylesheet" type="text/css">
@@ -22,7 +21,7 @@
       <div id="wrapper">
 
         <div id="login" class="animate form" ng-if="login">
-          <form name="loginForm" ng-submit="signIn()" novalidate>
+          <form name="loginForm" ng-submit="signIn()">
             <h1>Log in</h1>
             <p>
               <label for="email" class="uname"> Your email </label>
@@ -56,7 +55,7 @@
 
 
         <div id="register" class="animate form" ng-if="!login">
-          <form name="registerForm" ng-submit="register()" autocomplete="on" novalidate>
+          <form name="registerForm" ng-submit="register()" autocomplete="on">
             <h1> Sign up </h1>
             <p>
               <label for="usernamesignup" class="uname">Your username</label>
