--- a/client/views/admin/company.html
+++ b/client/views/admin/company.html
@@ -368,7 +368,7 @@
                                         <td>{{n.email}}</td>
                                         <td>{{n.address}}</td>
                                         <td>{{n.about}}</td>
-                                        <td>{{n.created_at }}</td>
+                                        <td>{{n.created_at | date:'dd/MM/yyyy HH:mm:ss'}}</td>
                                         <td class="actions">
                                             <a href="#" class=" btn btn-danger btn-sm " ng-disabled="n.block" ng-click="blockCompany(n)">
                                                 Block </a>
@@ -456,3 +456,10 @@
 <!-- AdminLTE for demo purposes -->
 <script src="views/admin/dist/js/demo.js"></script>
 <!-- page script -->
+<!-- page script -->
+<script>
+    $(function () {
+      $('#example1').DataTable();
+      
+    })
+  </script>
