--- a/client/views/company/index.html
+++ b/client/views/company/index.html
@@ -95,7 +95,7 @@
 				                <h2>Our Job<span class="cp_under_line" style="background-color: #F67011"></span></h2>
 				            </div>
 				        </div> -->
-	<div id="jobsListing" class="panel-collapse cp_our_jobs_container collapse in" aria-expanded="true" style="">
+	<div id="jobsListing" class="panel-collapse cp_our_jobs_container collapse in" aria-expanded="true" >
 		<div class="panel-body">
 			<div class="cp_our_jobs_listing" id="ajax_cp_our_jobs_listing">
 				<h3 style="border-color: #F67011">We Have 4 Jobs For You</h3>
