--- a/client/company/views/post.html
+++ b/client/company/views/post.html
@@ -23,7 +23,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Tiêu đề:</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control input-lg" ng-model="postDetail.name" placeholder="Tên công việc" />
+                        <input type="text" class="form-control input-lg" ng-model="postDetail.title" placeholder="Tên công việc" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,11 +66,11 @@
                     <label class="col-md-1 control-label">Địa điểm:</label>
                     <div class="col-md-3">
                         <select class="form-control select" ng-model="postDetail.address" data-style="btn-success">
-                            <option>Option 1</option>
-                            <option>Option 2</option>
-                            <option>Option 3</option>
-                            <option>Option 4</option>
-                            <option>Option 5</option>
+                            <option>Hà Nội</option>
+                            <option>Hồ Chí Minh </option>
+                            <option>Đà nẵng</option>
+                            <option>Huế</option>
+                            <option>Cần thơ</option>
                         </select>
                     </div>
                 </div>
